--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rimraf": "^5.0.1",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
+    "webpack-manifest-plugin": "^5.0.0",
     "zip-webpack-plugin": "^4.0.1"
   },
   "lint-staged": {
